--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
@@ -40,7 +40,7 @@ spec:
   activeDeadlineSeconds: {{ .Values.jobConfigs.activeDeadlineSeconds }}
   parallelism: {{ .Values.jobConfigs.parallelism }}
   completions: {{ .Values.jobConfigs.completions }}
-  {{ if semverCompare ">1.20" .Capabilities.KubeVersion.GitVersion -}}
+  {{ if semverCompare ">1.20.0-0" .Capabilities.KubeVersion.Version -}}
   suspend: {{ .Values.jobConfigs.suspend }}
   {{- end }}
   ttlSecondsAfterFinished: {{ .Values.jobConfigs.ttlSecondsAfterFinished }}
