--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-4-0/templates/_job_template_spec.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-4-0/templates/_job_template_spec.yaml
@@ -3,7 +3,7 @@ backoffLimit: {{ $.Values.jobConfigs.backoffLimit }}
 activeDeadlineSeconds: {{ $.Values.jobConfigs.activeDeadlineSeconds }}
 parallelism: {{ $.Values.jobConfigs.parallelism }}
 completions: {{ $.Values.jobConfigs.completions }}
-{{- if semverCompare ">1.20" .Capabilities.KubeVersion.GitVersion }}
+{{- if semverCompare ">1.20.0-0" .Capabilities.KubeVersion.Version }}
 suspend: {{ $.Values.jobConfigs.suspend }}
 {{- end }}
 ttlSecondsAfterFinished: {{ $.Values.jobConfigs.ttlSecondsAfterFinished }}
