--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-4-0/templates/cronjob.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-4-0/templates/cronjob.yaml
@@ -1,5 +1,5 @@
 {{- if eq .Values.kind "CronJob" }}
-{{- if semverCompare "<1.21" .Capabilities.KubeVersion.GitVersion }}
+{{- if semverCompare "<1.21.0-0" .Capabilities.KubeVersion.Version }}
 apiVersion: batch/v1beta1
 {{- else }}
 apiVersion: batch/v1
@@ -16,7 +16,7 @@ spec:
   schedule: {{ $.Values.cronjobConfigs.schedule | quote }}
   startingDeadlineSeconds: {{ $.Values.cronjobConfigs.startingDeadlineSeconds }}
   concurrencyPolicy: {{ $.Values.cronjobConfigs.concurrencyPolicy }}
-  {{- if semverCompare ">1.20" .Capabilities.KubeVersion.GitVersion }}
+  {{- if semverCompare ">1.20.0-0" .Capabilities.KubeVersion.Version }}
   suspend: {{ $.Values.cronjobConfigs.suspend }}
   {{- end }}
   successfulJobsHistoryLimit: {{ $.Values.cronjobConfigs.successfulJobsHistoryLimit }}
