--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-5-0/templates/_job_template_spec.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-5-0/templates/_job_template_spec.yaml
@@ -12,7 +12,7 @@ parallelism: {{ $.Values.jobConfigs.parallelism }}
 {{- if $.Values.jobConfigs.completions }}
 completions: {{ $.Values.jobConfigs.completions }}
 {{- end }}
-{{- if semverCompare ">1.20" .Capabilities.KubeVersion.GitVersion }}
+{{- if semverCompare ">1.20.0-0" .Capabilities.KubeVersion.Version }}
 {{- if $.Values.jobConfigs.suspend }}
 suspend: {{ $.Values.jobConfigs.suspend }}
 {{- end }}
