--- a/specs/resourceCatalogue/resource-objects-v2-release-feat.yaml
+++ b/specs/resourceCatalogue/resource-objects-v2-release-feat.yaml
@@ -98,13 +98,6 @@ paths:
           required: false
           schema:
             type: integer
-        - name: name
-          description: name of the resource, either this or id or identifier is required
-            It can be used as query param where name is a unique constraint.
-          in: query
-          required: false
-          schema:
-            type: string
         - name: identifier
           description: identifier of the resource is the unique string combination, either this or id or name is required.
             For some resource it can be resource name or a combination of resource property.
@@ -115,6 +108,24 @@ paths:
           schema:
             type: string
             example: "{releaseTrackName}-{releaseVersion}"
+        - name: lite
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
+          description: boolean value declaring that data to be fetched is lite or heavy
+        - name: dependencyInfo
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+          description: pipeline seperated dependency selector condition with (format|key) eg. for getting specific dependency from the list
+          example:
+            - application/devtron-application|v1|id|12
+            - application/devtron-application|v1|identifier|orchestrator
         - name: component
           in: query
           required: false
@@ -635,21 +646,20 @@ components:
         parentConfig:
           type: object
           properties:
-            type:
+            resourceKind:
               type: string
-              description: "type of parent"
               example: "release-track"
-            data:
-              type: object
-              properties:
-                id:
-                  type: integer
-                  description: id of the parent resource
-                  example: 1 # id of the release track of which release is part of
-                name:
-                  type: string
-                  description: name of the parent resource
-                  example: "kubernetes" # name of the release track of which release is part of
+            resourceVersion:
+              type: string
+              example: "alpha1"
+            id:
+              type: integer
+              description: id of the parent resource
+              example: 1 # id of the release track of which release is part of
+            identifier:
+              type: string
+              description: name of the dependency on which operation is to be performed
+              example: "orchestrator" # name of the release track of which release is part of
 
     DevtronResourcePatchObjectDto:
       type: object
@@ -669,15 +679,16 @@ components:
               type: number
               description: id of the dependency on which operation is to be performed
               example: 1
-            dependencyName:
+            identifier:
               type: string
               description: name of the dependency on which operation is to be performed
               example: "orchestrator"
-            schemaId:
-              type: number
-              description: schema id of the dependency on which operation is to be performed
-              example: 8
-
+            resourceKind:
+              type: string
+              example: "application/devtron-application"
+            resourceVersion:
+              type: string
+              example: "v1"
         query:
           type: array
           example:
@@ -796,27 +807,27 @@ components:
               dependentOnIndexes:
                 - 0
               typeOfDependency: upstream
-              devtronResourceId: 5
-              devtronResourceSchemaId: 6
+              resourceKind: "application/devtron-application"
+              resourceVersion: "v1"
               config:
-                - artifactConfig:
-                    artifactId: 1
-                    image: "docker.io/bitnami/memcached:1-debian-12"
-                    registryType: "docker"
-                    registryName: "devtron-docker"
-                - workflowId: 576
-                - commitSource:
-                    - author: "devtron-bot"
-                      branch: "main"
-                      message: "Merge pull request #41 from devtron-labs/config.md\n\ndoc: Create config.md"
-                      modifiedTime: "2023-10-31T06:37:35Z"
-                      revision: "dc994f3d4885a040122918919898b9e2ce85dea2"
-                      tag: ""
-                      url: "https://github.com/devtron-labs/kubewatch.git"
-                      webhookData:
-                        id: 0
-                        eventActionType: "merged"
-                        data: null
+                artifactConfig:
+                  artifactId: 1
+                  image: "docker.io/bitnami/memcached:1-debian-12"
+                  registryType: "docker"
+                  registryName: "devtron-docker"
+                workflowId: 576
+                commitSource:
+                  - author: "devtron-bot"
+                    branch: "main"
+                    message: "Merge pull request #41 from devtron-labs/config.md\n\ndoc: Create config.md"
+                    modifiedTime: "2023-10-31T06:37:35Z"
+                    revision: "dc994f3d4885a040122918919898b9e2ce85dea2"
+                    tag: ""
+                    url: "https://github.com/devtron-labs/kubewatch.git"
+                    webhookData:
+                      id: 0
+                      eventActionType: "merged"
+                      data: null
           items:
             $ref: '#/components/schemas/Dependency'
         childDependencies:
@@ -826,30 +837,23 @@ components:
     Dependency:
       type: object
       properties:
-        name:
-          type: string
-          description: The name of the dependency.
         id:
           type: integer
           description: The ID of the dependent resource object.
             For dependency type application/ job/ cluster it will the  appId/ jobId/ clusterId.
             If the dependency type is release/ release track, it will the  releaseId/ releaseTrackId.
-        devtronResourceId:
-          type: integer
-          description: The devtron resource ID of the dependency.
-            For release dependency will be devtron application
-        devtronResourceSchemaId:
-          type: integer
-          description: The devtron resource schema ID of the dependency.
-            For release dependency will be devtron application
+        resourceKind:
+          type: string
+          example: "application/devtron-application"
+        resourceVersion:
+          type: string
+          example: "v1"
         dependentOnIndexes:
           type: array
           items:
             type: number
           description: The index of the superior dependencies.
             For release the applications will have the index of level (typeOfDependency).
-        dependentOnParentIndex:
-          type: integer
         typeOfDependency:
           type: string
           enum: [ 'upstream','level' ]
@@ -859,6 +863,8 @@ components:
         config:
           type: object
           properties:
+            releaseInstruction:
+              type: string
             artifactConfig:
               type: object
               description: The image configuration.
@@ -879,9 +885,9 @@ components:
                   type: string
                   description: artifact registry store name
                   example: "devtron-docker"
-            workflowId:
+            ciWorkflowId:
               type: number
-              description: application workflow id
+              description: ci workflow id
               example: 29
             commitSource:
               type: array
