--- a/charts/devtron/devtron-bom.yaml
+++ b/charts/devtron/devtron-bom.yaml
@@ -7,15 +7,15 @@ global:
     allowPrivilegeEscalation: false
     runAsUser: 1000
     runAsNonRoot: true
+  containerRegistry: "quay.io/devtron"
 
 installer:
-  release: "v0.6.28"
-  image: "quay.io/devtron/inception"
+  release: "v0.6.29"
+  registry: ""
+  image: "inception"
   tag: "473deaa4-185-21582"
-  
 components:
   dashboard:
-    image: "quay.io/devtron/dashboard:9429b066-325-21529"
     config:
       extraConfigs:
         USE_V2: "true"
@@ -27,17 +27,35 @@ components:
         GLOBAL_API_TIMEOUT: "60000"
         TRIGGER_API_TIMEOUT: "60000"
         ENABLE_EXTERNAL_ARGO_CD: "false"
+        SERVICE_WORKER_TIMEOUT: "1"
+        API_BATCH_SIZE: "30"
+    registry: ""
+    image: "dashboard:1c86e84e-325-22108"
+    imagePullPolicy: IfNotPresent
+
   devtron:
-    image: "quay.io/devtron/hyperion:ca439071-280-21596"
-    cicdImage: "quay.io/devtron/devtron:ca439071-434-21597"
-    customOverrides:
-      DEFAULT_CI_IMAGE: "quay.io/devtron/ci-runner:d5f875c7-138-21576"
+    registry: ""
+    image: "hyperion:e7f34f5a-280-22107"
+    cicdImage: "devtron:e7f34f5a-434-22106"
+    imagePullPolicy: IfNotPresent
+    customOverrides: {}
+
+  ciRunner:
+    registry: ""
+    image: "ci-runner:f5614d79-541-22176"
+
+
   argocdDexServer:
-    image: "ghcr.io/dexidp/dex:v2.30.2"
+    registry: ""
+    image: "dex:v2.30.2"
+    imagePullPolicy: IfNotPresent
     initContainer:
-      authenticator: "quay.io/devtron/authenticator:e414faff-393-13273"
+      authenticator: "authenticator:e414faff-393-13273"
+
   kubelink:
-    image: "quay.io/devtron/kubelink:7c66e0fc-564-21516"
+    registry: ""
+    image: "kubelink:2610ac5a-564-22109"
+    imagePullPolicy: IfNotPresent
     configs:
       ENABLE_HELM_RELEASE_CACHE: "true"
       MANIFEST_FETCH_BATCH_SIZE: "2"
@@ -51,8 +69,10 @@ components:
     dbconfig:
       secretName: postgresql-postgresql
       keyName: postgresql-password
+
   kubewatch:
-    image: "quay.io/devtron/kubewatch:91c2cece-419-21178"
+    registry: ""
+    image: "kubewatch:50d4d32d-419-22116"
     imagePullPolicy: IfNotPresent
     configs:
       devtroncd_NAMESPACE: "devtron-ci"
@@ -60,12 +80,20 @@ components:
       ACD_NAMESPACE: "devtroncd"
       ACD_INFORMER: "true"
       NATS_STREAM_MAX_AGE: "10800"
+
   postgres:
-    image: "quay.io/devtron/postgres:11.9.0-debian-10-r26"
-    armImage: "quay.io/devtron/postgres:11.9"
-  gitsensor:
-    image: "quay.io/devtron/git-sensor:4bacf5f7-200-21575"
+    registry: ""
+    image: "postgres:11.9.0-debian-10-r26"
+    armImage: "postgres:11.9"
+    initImage: "minideb:latest"
     imagePullPolicy: "IfNotPresent"
+    metrics:
+      image: postgres_exporter:v0.4.7
+      armImage: postgres_exporter:v0.10.1
+  gitsensor:
+    registry: ""
+    image: "git-sensor:8545feb5-200-22005"
+    imagePullPolicy: IfNotPresent
     serviceMonitor:
       enabled: false
     persistence:
@@ -79,8 +107,10 @@ components:
     dbconfig:
       secretName: postgresql-postgresql
       keyName: postgresql-password
-  lens: 
-    image: "quay.io/devtron/lens:70577aaa-333-21179"
+# Values for lens
+  lens:
+    registry: ""
+    image: "lens:70577aaa-333-21179"
     imagePullPolicy: IfNotPresent
     configs:
       GIT_SENSOR_PROTOCOL: GRPC
@@ -93,21 +123,27 @@ components:
     dbconfig:
       secretName: postgresql-postgresql
       keyName: postgresql-password
+# Change below values for nats
   nats:
+    registry: ""
     image: nats:2.9.3-alpine
-    imagePullPolicy: IfNotPresent
     reloader:
-      image: quay.io/devtron/nats-server-config-reloader:0.6.2
+      image: nats-server-config-reloader:0.6.2
       imagePullPolicy: IfNotPresent
     metrics:
-      image: quay.io/devtron/prometheus-nats-exporter:0.9.0
+      image: prometheus-nats-exporter:0.9.0
       imagePullPolicy: IfNotPresent
+    natsBox:
+      image: nats-box
     serviceMonitor:
       enabled: false
     persistence:
       storage: 5Gi
   migrator:
-    image: "quay.io/devtron/migrator:v4.16.2"
+    registry: ""
+    image: "migrator:v4.16.2"
+    kubectlImage: "kubectl:latest"
+    duplicateChartImage: devtron-utils:dup-chart-repo-v1.1.0
     envVars:
       devtron:
         DB_NAME: "orchestrator"
@@ -117,21 +153,54 @@ components:
         DB_NAME: "git_sensor"
       lens: 
         DB_NAME: "lens"
-        
+
+  chartSync:
+    registry: ""
+    image: chart-sync:d0dcc590-373-21074
+  
+# values for argocd integration
 argo-cd:
   global:
     image:
+      # -- If defined, a repository applied to all Argo CD deployments
       repository: quay.io/argoproj/argocd
+      # -- Overrides the global Argo CD image tag whose default is the chart appVersion
       tag: "v2.5.2"
+      # -- If defined, a imagePullPolicy applied to all Argo CD deployments
       imagePullPolicy: IfNotPresent
-      
+# Change below values for workflow controller
 workflowController:
-  image: "quay.io/argoproj/workflow-controller:v3.4.3"
-  executorImage: "quay.io/argoproj/argoexec:v3.4.3"
-
+  registry: "quay.io/argoproj"
+  image: "workflow-controller:v3.4.3"
+  executorImage: "argoexec:v3.4.3"
+  IMDSv1Image: "workflow-controller:v3.0.7"
+  IMDSv1ExecutorImage: "argoexec:v3.0.7"
 security:
   imageScanner:
-    image: "quay.io/devtron/image-scanner:bdbcef05-334-21577"
-
+    image: "image-scanner:c0416bc2-334-22111"
+  clair:
+    image:
+      repository: clair
+      tag: 4.3.6
+# Values for notifier integration
 notifier:
-  image: "quay.io/devtron/notifier:e4ffc71a-372-20776"
+  image: "notifier:924a17f6-372-22110"
+minio:
+  image: "minio:RELEASE.2021-02-14T04-01-33Z"
+  mbImage: "minio-mc:RELEASE.2021-02-14T04-28-06Z"
+  gatewayImage: "minio:RELEASE.2020-12-03T05-49-24Z"
+
+# Values for grafana integration
+monitoring:
+  grafana:
+    registry: ""
+    image: "grafana:7.3.1"
+    busyboxImage: "busybox:1.31.1"
+    batsImage: "bats:v1.4.1"
+    imagePullPolicy: IfNotPresent
+    grafanaOrgJob:
+      curlImage: k8s-utils:tutum-curl
+    grafanaDashboards:
+      image: "k8s-sidecar:1.1.0"
+      curlImage: "curl:7.73.0"
+      imagePullPolicy: IfNotPresent
