--- a/DockerfileEA
+++ b/DockerfileEA
@@ -8,7 +8,7 @@ WORKDIR /go/src/github.com/devtron-labs/devtron
 ADD . /go/src/github.com/devtron-labs/devtron/
 RUN GOOS=linux make build-all
 
-FROM ubuntu as  devtron-ea
+FROM ubuntu:22.04@sha256:1b8d8ff4777f36f19bfe73ee4df61e3a0b789caeff29caa019539ec7c9a57f95 as  devtron-ea
 
 RUN apt update
 RUN apt install ca-certificates curl -y
