dev testing fixes

--- a/enterprise/specs/k8sWatcher/k8sWatcher.yaml
+++ b/enterprise/specs/k8sWatcher/k8sWatcher.yaml
@@ -152,6 +152,15 @@ paths:
                 - 'Failed'
                 - 'Progressing'
           description: cluster names
+        - in: query
+          name: order
+          schema:
+            type: string
+            enum:
+              - 'asc'
+              - 'desc'
+          required: false
+          description: order result by intercepted_at
         - name: from
           in: query
           schema:
