--- a/specs/workflow/app-workflow-list-spec.yaml
+++ b/specs/workflow/app-workflow-list-spec.yaml
@@ -3,16 +3,16 @@ info:
   version: 1.0.0
   title: Modularisation v1 APIs
 paths:
-  /orchestrator/app/app-wf/list-components/{appId}:
+  /orchestrator/app/app-wf/list-components/{appName}:
     get:
       description: Get the workflows list with it's component details for a particular application
       parameters:
-        - name: appId
-          description: application id
+        - name: appName
+          description: application name
           in: path
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         "200":
           description: Successfully fetched commit info. if CommitInfo is null, then commit is not found.
@@ -59,7 +59,7 @@ components:
           example: "wf-90-5huy"
         ciPipeline:
           $ref: "#/components/schemas/CiPipelineInfo"
-        cdPipeline:
+        cdPipelines:
           $ref: "#/components/schemas/CdPipelinesInfo"
 
     CiPipelineInfo:
@@ -76,13 +76,13 @@ components:
         pipelineType:
           type: string
           description: ci pipeline type
-          example: "NORMAL"
+          example: "CI"
           enum:
-            - "CI_JOB"
-            - "NORMAL"
-            - "LINKED_CD"
-            - "LINKED"
+            - "CI"
             - "WEBHOOK"
+            - "LINKED-CI"
+            - "CI-JOB"
+            - "LINKED-CD"
         ciMaterial:
           type: array
           description: git materials configured for CI
@@ -120,7 +120,6 @@ components:
                     enum:
                       - "SOURCE_TYPE_BRANCH_FIXED"
                       - "SOURCE_TYPE_BRANCH_REGEX"
-                      - "SOURCE_TYPE_TAG_ANY"
                       - "WEBHOOK"
                   value:
                     type: string
